Added the total donations and active disaster on the home page

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -25,8 +25,18 @@
 <div class="action-buttons">
     <a href="/Register" class="btn btn-primary">Register</a>
     <a href="/Login" class="btn btn-success">Login</a>
-    
+
+    <a asp-page="DON_VIEW" class="btn btn-primary">
+        <h2>Total Donations</h2>
+        
+    </a>
+    <a asp-page="ActivDVIEW" class="btn btn-primary">
+        <h2>Active Disasters</h2>
+        
+    </a>
 </div>
+
+
 
 <style>
 
